--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 apply plugin: 'kotlin-kapt'
-//apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     namespace 'com.example.daggermigration'
@@ -52,12 +52,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
-    implementation 'com.google.dagger:dagger:2.45'
-    kapt 'com.google.dagger:dagger-compiler:2.45'
+//    implementation 'com.google.dagger:dagger:2.45'
+//    kapt 'com.google.dagger:dagger-compiler:2.45'
 //    kaptAndroidTest 'com.squareup.dagger:dagger-compiler:2.45'
 
-//    implementation "com.google.dagger:hilt-android:$hilt_version"
-//    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
