--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
-    implementation 'com.squareup.dagger:dagger:1.2.5'
-    kapt 'com.squareup.dagger:dagger-compiler:1.2.5'
-    kaptAndroidTest 'com.squareup.dagger:dagger-compiler:1.2.5'
+    implementation project(':eero-dagger')
+    implementation project(':eero-dagger-javax')
+    kapt project(':eero-dagger-compiler')
+    kaptAndroidTest project(':eero-dagger-compiler')
+
+    implementation 'com.google.dagger:dagger:2.48.1'
+    kapt 'com.google.dagger:dagger-compiler:2.48.1'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.48.1'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
