--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,6 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "DaggerMigration"
-include ':app'
+include ':app', ':eero-dagger',
+':eero-dagger-compiler',
+':eero-dagger-javax'
